8130183: InnerClasses: VM permits wrong Throw ClassFormatError if InnerClasses attribute's inner_class_info_index is 0 8268071: Improved class naming

Reviewed-by: bae